<resources>
    <string name="app_name">StoreOne</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="home">Главная</string> />
    <string name="directory">Каталог</string> />
    <string name="cart">Корзина</string> />
    <string name="profile">Профиль</string> />
    <string name="favorite">Избранное</string>
    <string name="text_btn_login" />
    <string name="res">TODO</string>
    <string name="promotion">Акции</string>
    <string name="location">Магазины</string>
    <string name="delivery">Доставка</string>
    <string name="gift">Подарки</string>
    <string name="popular_categories">Популярные категории</string>
    />
</resources>