<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_dialog_map"
        android:state_checked="true"
        android:title="@string/home" />
    <item
        android:id="@+id/action_directory"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:state_checked="false"
        android:title="@string/directory" />
    <item
        android:id="@+id/action_cart"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:state_checked="false"
        android:title="@string/cart" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:state_checked="false"
        android:title="@string/favorite" />
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:state_checked="false"
        android:title="@string/profile" />
</menu>